= Changelog

== v2024.7.0 (work in progress)

=== Shapes

=== Architectural decision records

=== Deprecation warning

=== Breaking changes

=== Dependency update

- https://github.com/eclipse-sirius/sirius-web/issues/2837[#2837] [gantt] Move to @ObeoNetwork/gantt-task-react 0.4.13 to benefit for enhancements

=== Bug fixes
- https://github.com/eclipse-sirius/sirius-web/issues/3515[#3515] [form] Form pages appear in the addition order

=== New Features

=== Improvements

- https://github.com/eclipse-sirius/sirius-web/issues/3511[#3511] [diagram] Improve edge handle position for border nodes
- https://github.com/eclipse-sirius/sirius-web/issues/2837[#2837] [gantt] Enhance gantt scroll bar management

== v2024.5.0

=== Shapes

- Configurable collapse
- Add support for EMF models migration
- Add support for representations migration
- Add Assertions and Navigators to improve Diagram testability
- Improve document upload
- Configurable visibility
- Create a representation using the content of another representation as input
- Add support for DateTime widget

=== Architectural decision records

- [ADR-139] Add Is Collapsed By Default Expression in NodeDescription entity in the view DSL
- [ADR-140] Add collapse and expand services
- [ADR-141] Factorize GraphQL queries in tests
- [ADR-142] Add report on document upload
- [ADR-143] Handle documents upload with other formats than JSON and XMI
- [ADR-144] Add the support for EMF models migration
- [ADR-145] Add a hook to update nodes in ReactFlow
- [ADR-146] Add support for contributing representation metadata for transient representations
- [ADR-147] Add support for overlapping nodes
- [ADR-148] Improve edge layout
- [ADR-149] Add Default Visibility Fields in View DSL
- [ADR-150] Add hide/reveal/fade/unfade services

=== Deprecation warning
